// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel renders 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-fBfsKi djMEnr"
  >
    <div
      className="sc-jRSqCh cJghQk"
    >
      <ul
        className="sc-fZuPrs sc-jPGhGf eVYiTZ kpBRip"
      >
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-ccATMr cMzDlF"
          >
            0
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-ccATMr cMzDlF"
          >
            1
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-ccATMr cMzDlF"
          >
            2
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-ccATMr cMzDlF"
          >
            3
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-ccATMr cMzDlF"
          >
            4
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-ccATMr cMzDlF"
          >
            5
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-ccATMr cMzDlF"
          >
            6
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-ccATMr cMzDlF"
          >
            7
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-ccATMr cMzDlF"
          >
            8
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-ccATMr cMzDlF"
          >
            9
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-ccATMr cMzDlF"
          >
            10
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-ccATMr cMzDlF"
          >
            11
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-ccATMr cMzDlF"
          >
            12
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-ccATMr cMzDlF"
          >
            13
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-ccATMr cMzDlF"
          >
            14
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-ccATMr cMzDlF"
          >
            15
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-ccATMr cMzDlF"
          >
            16
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-ccATMr cMzDlF"
          >
            17
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-ccATMr cMzDlF"
          >
            18
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-ccATMr cMzDlF"
          >
            19
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-ccATMr cMzDlF"
          >
            20
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-ccATMr cMzDlF"
          >
            21
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-ccATMr cMzDlF"
          >
            22
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-ccATMr cMzDlF"
          >
            23
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-ccATMr cMzDlF"
          >
            24
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Carousel renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex justify-around items-center w-full"
  >
    <div
      className="sc-lbCmg RdzVf"
    >
      <div
        className="sc-jRSqCh cJghQk"
      >
        <ul
          className="sc-fZuPrs sc-jPGhGf eVYiTZ kpBRip"
        >
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-ibSMNl gUYQlA"
            >
              24
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-ibSMNl gUYQlA"
            >
              23
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-ibSMNl gUYQlA"
            >
              22
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-ibSMNl gUYQlA"
            >
              21
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-ibSMNl gUYQlA"
            >
              20
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-ibSMNl gUYQlA"
            >
              19
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-ibSMNl gUYQlA"
            >
              18
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-ibSMNl gUYQlA"
            >
              17
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-ibSMNl gUYQlA"
            >
              16
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-ibSMNl gUYQlA"
            >
              15
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-ibSMNl gUYQlA"
            >
              14
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-ibSMNl gUYQlA"
            >
              13
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-ibSMNl gUYQlA"
            >
              12
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-ibSMNl gUYQlA"
            >
              11
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-ibSMNl gUYQlA"
            >
              10
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-ibSMNl gUYQlA"
            >
              9
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-ibSMNl gUYQlA"
            >
              8
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-ibSMNl gUYQlA"
            >
              7
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-ibSMNl gUYQlA"
            >
              6
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-ibSMNl gUYQlA"
            >
              5
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-ibSMNl gUYQlA"
            >
              4
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-ibSMNl gUYQlA"
            >
              3
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-ibSMNl gUYQlA"
            >
              2
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-ibSMNl gUYQlA"
            >
              1
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-ibSMNl gUYQlA"
            >
              0
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel renders visible index 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-jRSqCh cJghQk"
  >
    <ul
      className="sc-fZuPrs sc-jPGhGf dohqYN kpBRip"
    >
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-hyCmHO nYZUJ"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-hyCmHO nYZUJ"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-hyCmHO nYZUJ"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-hyCmHO nYZUJ"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-hyCmHO nYZUJ"
        >
          -1
          , 
          -1
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Carousel renders with Customized Arrows 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-jRSqCh cJghQk"
  >
    <button
      disabled={true}
      onClick={[Function]}
    >
      Scroll to left
    </button>
    <ul
      className="sc-fZuPrs sc-jPGhGf eVYiTZ kpBRip"
    >
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-bVMxNJ ciKa-Ds"
        >
          0
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-bVMxNJ ciKa-Ds"
        >
          1
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-bVMxNJ ciKa-Ds"
        >
          2
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-bVMxNJ ciKa-Ds"
        >
          3
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-bVMxNJ ciKa-Ds"
        >
          4
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-bVMxNJ ciKa-Ds"
        >
          5
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-bVMxNJ ciKa-Ds"
        >
          6
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-bVMxNJ ciKa-Ds"
        >
          7
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-bVMxNJ ciKa-Ds"
        >
          8
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-bVMxNJ ciKa-Ds"
        >
          9
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-bVMxNJ ciKa-Ds"
        >
          10
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-bVMxNJ ciKa-Ds"
        >
          11
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-bVMxNJ ciKa-Ds"
        >
          12
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-bVMxNJ ciKa-Ds"
        >
          13
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-bVMxNJ ciKa-Ds"
        >
          14
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-bVMxNJ ciKa-Ds"
        >
          15
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-bVMxNJ ciKa-Ds"
        >
          16
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-bVMxNJ ciKa-Ds"
        >
          17
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-bVMxNJ ciKa-Ds"
        >
          18
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-bVMxNJ ciKa-Ds"
        >
          19
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-bVMxNJ ciKa-Ds"
        >
          20
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-bVMxNJ ciKa-Ds"
        >
          21
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-bVMxNJ ciKa-Ds"
        >
          22
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-bVMxNJ ciKa-Ds"
        >
          23
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-bVMxNJ ciKa-Ds"
        >
          24
        </div>
      </li>
    </ul>
    <button
      disabled={true}
      onClick={[Function]}
    >
      Scroll to Right
    </button>
  </div>
</div>
`;

exports[`Carousel renders with different Space 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-jRSqCh cJghQk"
  >
    <ul
      className="sc-fZuPrs sc-jPGhGf dohqYN kpBRip"
    >
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-hnCQzQ ffLVqC"
        >
          0
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-hnCQzQ ffLVqC"
        >
          1
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-hnCQzQ ffLVqC"
        >
          2
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-hnCQzQ ffLVqC"
        >
          3
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-hnCQzQ ffLVqC"
        >
          4
        </div>
      </li>
    </ul>
  </div>
</div>
`;
